Update environment configuration for Stripe payment URLs and endpoint secret

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,13 @@
 PORT= 3003
+
+#stripe secret key
+STRIPE_SECRET= 
+
+#stripe success url
+STRIPE_SUCCESS_URL= http://localhost:3003/payments/success
+
+#stripe cancel url
+STRIPE_CANCEL_URL= http://localhost:3003/payments/cancel
+
+#signing secret for local testing
+STRIPE_ENDPOINT_SECRET=     
