Add NATS microservices support and update environment configuration

--- a/.env.template
+++ b/.env.template
@@ -11,3 +11,6 @@ STRIPE_CANCEL_URL= http://localhost:3003/payments/cancel
 
 #signing secret for local testing
 STRIPE_ENDPOINT_SECRET=     
+
+## NATS SERVER
+NATS_SERVERS="nats://localhost:4222"
